...

        <Spinner
            android:id="@+id/spinnerMaxClaimType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Spinner
            android:id="@+id/spinnerSalaryType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <EditText
            android:id="@+id/editRate1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <EditText
            android:id="@+id/editRate2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <EditText
            android:id="@+id/editRate3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <EditText
            android:id="@+id/inputMaxClaimSalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <EditText
            android:id="@+id/inputBasicSalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <EditText
            android:id="@+id/inputOt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <EditText
            android:id="@+id/inputOt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <EditText
            android:id="@+id/inputOt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <EditText
            android:id="@+id/inputOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/textOtRate1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/hourlyBasicRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/showOtPay3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textOtRate3"
            app:layout_constraintStart_toEndOf="@+id/textOtRate3"
            app:layout_constraintTop_toTopOf="@+id/textOtRate3" />

        <TextView
            android:id="@+id/textOtRate2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/showOtPay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/showOtPay2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/showOtPayTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/otPay15hrs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/otPay20hrs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/otPay30hrs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/showTotalSalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
    <!-- Calculate Button-->
    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
