...
    <item
        android:id="@+id/selectLanguage"
        android:title="@string/language">
        <menu>
            <item
                android:id="@+id/english"
                android:title="English" />
            <item
                android:id="@+id/chinese"
                android:title="中文" />
        </menu>
    </item>
</menu>
